fix: correctly align footer for mobile

--- a/sass/parts/_footer.scss
+++ b/sass/parts/_footer.scss
@@ -29,3 +29,11 @@ footer {
   margin-right: 0;
   text-align: right;
 }
+
+@media (max-width: 710px) {
+  .footer-right, .footer-center, .footer-left {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
